# Toolsapp

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
tools/: tests.py  urls.py  views.py
tools/templates/tools/: base.html  file_hash.html  home.html  image_compress.html  image_convert.html  image_filters.html  image_resize.html  image_watermark.html  qr.html
tools/utils/: hash_utils.py
