[project]
name = "toolsapp"
version = "0.1.0"
description = ""
authors = [
    {name = "rumi",email = "pouya.zm83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0,<7.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "qrcode (>=8.2,<9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
